# filters_CppProject

./: Application.cpp  Application.h  BaseFilter.h  Bitmap.cpp  Bitmap.h  BlurFilter.cpp  BlurFilter.h  CMakeLists.txt  Cmd_Arg_Parser.cpp  Cmd_Arg_Parser.h  CropFilter.cpp  CropFilter.h  EdgeFilter.cpp  EdgeFilter.h  FilterPipelineFactory.cpp  FilterPipelineFactory.h  GsFilter.cpp  GsFilter.h  NegFilter.cpp  NegFilter.h  README.md  SharpFilter.cpp  SharpFilter.h  main.cpp
